@@ -15,6 +15,17 @@ assembly-with-methods.exe: assembly-with-methods.cs
 
 assembly-with-params.exe: assembly-with-params.cs
 	gmcs assembly-with-params.cs
+	
+assembly-with-constants.exe: assembly-with-constants.cs
+	gmcs assembly-with-constants.cs
+
+TEST_BINARIES = assembly-with-resource.exe \
+	assembly-with-complex-type.exe \
+	assembly-with-methods.exe \
+	assembly-with-params.exe \
+	assembly-with-constants.exe \
+	simple-assembly.exe
+
 
 gen-md-tests: gen-md-tests.c
 	gcc $(GLIB_CFLAGS) $(GLIB_LINK_FLAGS) -I../../../ gen-md-tests.c ../../mini/.libs/libmono.a -g -Wall -lpthread -lm -ldl -lrt -o gen-md-tests
@@ -43,7 +54,7 @@ cli-metadata-tests.ok: gen-md-tests cli-metadata-tests.md simple-assembly.exe
 	./gen-md-tests cli-metadata-tests.md
 	touch cli-metadata-tests.ok
 
-cli-tables-tests.ok: gen-md-tests cli-tables-tests.md simple-assembly.exe assembly-with-complex-type.exe assembly-with-methods.exe assembly-with-global-method.exe assembly-with-params.exe
+cli-tables-tests.ok: gen-md-tests cli-tables-tests.md $(TEST_BINARIES)
 	./gen-md-tests cli-tables-tests.md
 	touch cli-tables-tests.ok
 
